# tvm-exp

./: .gitignore  tst
apps/microtvm/zephyr/template_project/: boards.json
python/tvm/contrib/: pipeline_executor.py  pipeline_executor_build.py
python/tvm/relay/frontend/: keras.py
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-08/project/: model.tar  prj.conf
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-08/project/model/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-08/project/model/src/: default.relay
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-18/project/: CMakeLists.txt  model.tar
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-18/project/model/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
tests/micro/zephyr/workspace_conftest_qemu_riscv32/2022-07-06T23-12-18/project/model/src/: default.relay
tests/micro/zephyr/workspace_conftest_qemu_riscv64/2022-07-06T23-20-37/project/: CMakeLists.txt  model.tar  prj.conf
tests/micro/zephyr/workspace_conftest_qemu_riscv64/2022-07-06T23-20-37/project/include/: input_data.h  output_data.h
tests/micro/zephyr/workspace_conftest_qemu_riscv64/2022-07-06T23-20-37/project/model/codegen/host/include/: tvmgen_default.h
tests/micro/zephyr/workspace_conftest_qemu_riscv64/2022-07-06T23-20-37/project/model/codegen/host/src/: default_lib1.c
tests/micro/zephyr/workspace_conftest_qemu_riscv64/2022-07-06T23-20-37/project/model/src/: default.relay
tvm_wks/: partition_graph.py  pipeline_execution.py  test_pipeline_executor.py
tvm_wks/mircro_tvm_zephyr/: CMakeLists.txt
